@@ -1,6 +1,6 @@
 function post_ajax_setter(text,li)
 {
-	hidden_field_to_update = text.id.substring(0,text.id.length-10);
+	hidden_field_to_update = text.id;
 	$(hidden_field_to_update).value = li.id;
 	text.blur();
 }
